--- a/package.json
+++ b/package.json
@@ -6,20 +6,24 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "test": "mocha -r ts-node/register test/**/*.ts"
+    "test": "jest" 
   },
+  
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/chai": "^4.3.19",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.14",
     "@types/mocha": "^10.0.7",
     "@types/node": "^22.5.0",
     "@types/supertest": "^6.0.2",
     "chai": "^5.1.1",
+    "jest": "^29.7.0",
     "mocha": "^10.7.3",
     "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   },
