--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "test": "jest" 
+    "test": "jest"
   },
-  
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -28,8 +27,10 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.4.7",
     "express": "^4.19.2",
+    "pg": "^8.13.1",
+    "postgres": "^3.4.5",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   }
