--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "startsteps-newsapp-be",
   "version": "1.0.0",
-  "description": "Imagine you want to build a news web app that shows articles by certain topics. What you need is: - a backend that manages articles and topics - a frontend that shows topics and articles",
+  "description": "Backend for a news app managing articles and topics.",
   "main": "index.js",
   "scripts": {
     "build": "tsc",
