--- a/package.json
+++ b/package.json
@@ -13,26 +13,28 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/chai": "^4.3.19",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.14",
-    "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/mocha": "^10.0.7",
     "@types/node": "^22.5.0",
+    "@types/pg": "^8.11.11",
     "@types/supertest": "^6.0.2",
     "chai": "^5.1.1",
     "jest": "^29.7.0",
-    "jest": "^29.7.0",
     "mocha": "^10.7.3",
     "supertest": "^7.0.0",
-    "ts-jest": "^29.2.5",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.7",
-    "express": "^4.19.2",
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
     "postgres": "^3.4.5",
     "sqlite": "^5.1.1",
